WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103986
[BlackBerry] DRT - Tests under "dumpAsText" directory should be dumped as text
https://bugs.webkit.org/show_bug.cgi?id=103986
Summary
[BlackBerry] DRT - Tests under "dumpAsText" directory should be dumped as text
Xiaobo Wang
Reported
2012-12-04 02:25:44 PST
This is already implemented by other portings. We have the following subset named as "dumpAsText". fast/css/dumpAsText fast/encoding/dumpAsText svg/hixie/error/dumpAsText http/tests/xmlviewer/dumpAsText
Attachments
patch
(3.53 KB, patch)
2012-12-04 02:47 PST
,
Xiaobo Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Xiaobo Wang
Comment 1
2012-12-04 02:47:39 PST
Created
attachment 177460
[details]
patch
Rob Buis
Comment 2
2012-12-04 05:01:23 PST
Comment on
attachment 177460
[details]
patch LGTM.
WebKit Review Bot
Comment 3
2012-12-04 05:17:25 PST
Comment on
attachment 177460
[details]
patch Rejecting
attachment 177460
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ripts/update-webkit line 152. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource From
http://git.chromium.org/external/Webkit
0d88f53..f6cbfc8 HEAD -> origin/HEAD error: Ref refs/remotes/origin/master is at f6cbfc870fb3b0870aae1ae7aab9ac5a49479cbf but expected 0d88f53cf5ed384d9fa5b7f90325f9695f0071df ! 0d88f53..f6cbfc8 master -> origin/master (unable to update local ref) Died at Tools/Scripts/update-webkit line 152. Full output:
http://queues.webkit.org/results/15103952
Charles Wei
Comment 4
2012-12-04 20:37:18 PST
Comment on
attachment 177460
[details]
patch recommit
WebKit Review Bot
Comment 5
2012-12-04 20:41:42 PST
Comment on
attachment 177460
[details]
patch Clearing flags on attachment: 177460 Committed
r136628
: <
http://trac.webkit.org/changeset/136628
>
WebKit Review Bot
Comment 6
2012-12-04 20:41:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug