[BlackBerry] DRT - Tests under "dumpAsText" directory should be dumped as text https://bugs.webkit.org/show_bug.cgi?id=103986

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-12-04
Reviewed by Rob Buis.

Also move declaration of webSettingTransaction to before any WebSettings
::setXXX() calls so that it works as expected (commit only once in the
function scope).

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(shouldDumpAsText):
(BlackBerry::WebKit::DumpRenderTree::resetToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/122210@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136628 268f45cc-cd09-0410-ab3c-d52691b4dbfc